Imported all relevant thumbnails added nutrition logo added styles to nutrition section added substitute div added checkbox w text for substitute div fixed image overflow

--- a/client/project-three-peapod/src/components/Product.css
+++ b/client/project-three-peapod/src/components/Product.css
@@ -34,7 +34,7 @@
 }
 
 .main-info-thumbnail img {
-  max-height: 500px;
+  max-height: 290px;
   width: auto;
   height: auto;
 }
@@ -65,23 +65,34 @@
 
 .price-button-div-item {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: flex-start;
   flex-direction: row;
   align-items: center;
   font-weight: 600;
-  font-size: 12px;
   width: 100%;
   padding: 20px 20px 0 20px;
+  margin-left: 55%;
+}
+.price-button-div-item img {
+  max-width: 200px;
 }
 
-.price-button-div-item button {
-  margin: 0;
-  border: 0;
-  border-radius: 0;
-  padding: 8px;
-  font-size: inherit;
-  background-color: #4D6E22;
-  color: #FFFFFF;
+.price-button-div-item span {
+  margin-right: 15%;
+  font-size: 31px;
+}
+
+.price-button-div-item-text p {
+  font-size: 13px;
+  margin: 5px 10px 0px 0px;
+  color: darkgrey;
+  font-style: italic;
+}
+
+
+.price-lower-item {
+  margin-right: 15%;
+  font-size: 18px;
 }
 
 .info-div-sub {
@@ -121,7 +132,7 @@
 }
 
 .nutrition-div img {
-  max-width:450px;
+  max-width:500px;
   max-height:100px;
   width: auto;
   height: auto;
@@ -130,7 +141,99 @@
 .nutrition-recipe-banner {
   display: flex;
   justify-content: center;
-  background: #F4F3F4;
+  padding: 8px;
+  background: #F4F3F4;;
+}
+
+.nutrition-recipe-banner img {
+  justify-content: center;
+}
+
+.nutrition-logo img {
+  max-height: 55px;
+}
+
+.info-for-nutrition {
+  display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+}
+
+.info-for-nutrition h3 {
+  font-size: 25px;
+}
+
+.nutrition-split-div {
+  width: 60%;
+}
+
+.nutrition-title {
+  border-bottom: 1px solid black;
+  margin-left: 8%;
+  width: 85%;
+}
+
+.nutrition-breakdown-div {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.single-nutrition-breakdown-div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.single-nutrition-breakdown-div h3 {
+  margin: 0;
+}
+
+.single-nutrition-breakdown-div h4 {
+  margin: 0;
+  font-weight: bold;
+  color: slategray
+}
+
+.substitute-item-div {
+  width: 40%;
+}
+
+.substitute-item-title {
+  border-bottom: 1px solid black;
+}
+
+.substitute-image {
+  display: flex;
+  flex-direction: row;
+}
+
+.beefsteak-tomatoes-thumbnail {
+  height: 100px;
+}
+
+.beefsteak-tomatoes-substitute-text h6 {
+  margin: 10px 0 0 0;
+  font-size: 15px;
+}
+
+.beefsteak-tomatoes-substitute-text p {
+  color: darkgray;
+  font-size: 15px;
+}
+
+.substitute-checkbox {
+  display: flex;
+  flex-direction: row;
+}
+
+.substitute-checkbox img {
+  width: 45px;
+}
+
+.substitute-checkbox p {
+  display: flex;
+  align-items: center;
 }
 
 /* Y AXIS */
@@ -148,6 +251,7 @@
   display: flex;
   flex-direction: column;
   padding: 20px 0px;
+  border-bottom: 1px solid black;
 }
 
 .single-main-info-div {
@@ -163,10 +267,22 @@
   justify-content: space-between;
 }
 
-.single-suggested-add-button {
-  width: 40%;
+.single-suggested-button-price-div p {
+  font-size: 22px;
+  font-weight: 600;
+  margin: 5px 5px;
+}
+
+.single-suggested-button-price-div img {
+  width: 140px;
   padding: 3px;
   margin: 0;
   border-radius: 1px;
-  font-size: 12px;
+}
+
+.singular-add-to-cart {
+  width: 140px;
+  padding: 3px;
+  margin: 0;
+  border-radius: 1px;
 }
